Fix navbar contrast for body tertiary backgrounds in dark mode

--- a/btdt/css/color-theme-rules.css
+++ b/btdt/css/color-theme-rules.css
@@ -782,6 +782,8 @@ button.list-group-item.active {
 .navbar.bg-info,
 .navbar.bg-warning,
 .navbar.bg-danger,
+.navbar.bg-body-secondary,
+.navbar.bg-body-tertiary,
 .navbar.bg-light,
 .navbar.bg-dark,
 .navbar.bg-black,
